frontend/src/assets/styles/ui/_button.scss
.oyk-button {
  background-color: color-mix(in srgb, var(--oyk-card-fg) 10%, transparent);
  border: 1px solid transparent;
  border-radius: var(--oyk-radius);
  color: var(--oyk-card-fg);
  font-family: "Inter", sans-serif;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1;
  white-space: nowrap;
  overflow: hidden;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: auto;
  max-width: 100%;
  position: relative;
  padding: 12px 24px;
  transition: opacity 0.2s;

  &:not(:disabled):hover {
    opacity: 0.8;
    cursor: pointer;
  }

  &:not(:disabled):active {
    opacity: 0.6;
    transform: scale(0.98);
  }

  &:disabled {
    cursor: default;
    opacity: 0.5;
  }

  &-plain {
    background-color: transparent !important;
    border: none;
  }

  &-outline {
    background-color: transparent !important;
    border: 1px solid color-mix(in srgb, var(--oyk-card-fg) 10%, transparent);
  }

  &-small {
    font-size: 0.8rem;
    line-height: 1.2;
    padding: 8px 12px;
  }

  &-block {
    width: 100%;
  }

  &-icon {
    padding: 12px;

    &.oyk-button-outline {
      padding: 11px;
    }

    &.oyk-button-small {
      padding: 8px;
    }
  }

  &-loading {
    display: flex;
    align-items: center;
    justify-content: center;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 1;

    &-icon {
      animation: spin 2s linear infinite;
    }
  }

  &-content {
    text-overflow: ellipsis;
    overflow: hidden;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    gap: 8px;
    max-width: 100%;
    position: relative;

    &-loading {
      opacity: 0;
    }
  }

  &-badge {
    background-color: var(--oyk-c-primary);
    color: var(--oyk-c-primary-fg);
    font-size: 0.7rem;
    line-height: 1;
    text-align: right;
    position: absolute;
    top: 4px;
    right: 4px;
  
    &.oyk-dot {
      border: 3px solid var(--oyk-card-bg);
      border-radius: 50%;
      height: 12px;
      width: 12px;
      top: 7px;
      right: 6px;
    }
  
    &.oyk-count {
      border-radius: 12px;
      padding: 2px 4px;
    }
  }

  &-default {
    background-color: color-mix(in srgb, var(--oyk-card-fg) 30%, transparent);
    border-color: color-mix(in srgb, var(--oyk-card-fg) 30%, transparent);
    color: var(--oyk-card-fg);

    &:not(.oyk-button-outline) {
      border-color: transparent;
    }

    &.oyk-button-plain {
      color: inherit;
    }
  }

  &-card {
    background-color: var(--oyk-card-bg);
    border-color: var(--oyk-card-bg);
    color: var(--oyk-card-fg);

    &:not(.oyk-button-outline) {
      border-color: transparent;
    }
  }

  &-primary {
    background-color: color-mix(in srgb, var(--oyk-c-primary) 99%, transparent);
    border-color: color-mix(in srgb, var(--oyk-c-primary) 99%, transparent);
    color: var(--oyk-c-primary-fg);

    &:not(.oyk-button-outline) {
      border-color: transparent;
      color: var(--oyk-c-primary-fg);
    }

    &.oyk-button-outline {
      color: var(--oyk-c-primary);
    }
  }

  &-danger {
    background-color: color-mix(in srgb, var(--oyk-c-danger) 30%, transparent);
    border-color: color-mix(in srgb, var(--oyk-c-danger) 50%, transparent);
    color: var(--oyk-c-danger);
  }

  &-warning {
    background-color: color-mix(in srgb, var(--oyk-c-warning) 30%, transparent);
    border-color: color-mix(in srgb, var(--oyk-c-warning) 50%, transparent);
    color: var(--oyk-c-warning);
  }

  &-success {
    background-color: color-mix(in srgb, var(--oyk-c-success) 30%, transparent);
    border-color: color-mix(in srgb, var(--oyk-c-success) 50%, transparent);
    color: var(--oyk-c-success);
  }
}

@keyframes spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

